--- a/Flubber/sample/build.gradle
+++ b/Flubber/sample/build.gradle
@@ -36,5 +36,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     compile 'com.android.support:design:25.1.1'
     compile 'com.android.support:recyclerview-v7:25.1.1'
-    compile 'com.android.support:cardview-v7:25.1.1'
+    compile 'cn.carbswang.android:NumberPickerView:1.1.0'
 }
