--- a/Flubber/sample/build.gradle
+++ b/Flubber/sample/build.gradle
@@ -37,4 +37,6 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.2.0'
     compile 'cn.carbswang.android:NumberPickerView:1.1.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.0'
+    compile 'org.adw.library:discrete-seekbar:1.0.1'
+
 }
