--- a/Flubber/sample/build.gradle
+++ b/Flubber/sample/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
     defaultConfig {
-        applicationId "com.appolica.spring"
+        applicationId "com.appolica.flubber"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
