--- a/Flubber/gradle.properties
+++ b/Flubber/gradle.properties
@@ -17,3 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 # org.gradle.parallel=true
 
 LIB_VERSION = 1.0.1
+android.useAndroidX=true
+android.enableJetifier=true
